--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         </div>
         <!-- input type: name: placeholder:same class for input use textarea for long text field-->
         <input type="hidden" name="access_key" value="032437ac-e754-4bb5-8636-471435c3c3e3"> 
-        <input type="hidden" name="redirect" value="https://unviere.github.io/Unviere"><!--important-->
+        <input type="hidden" name="redirect" value="https://legacy.unviere.com"><!--important-->
         <h1 class="form-input-title">username</h1>
         <input type="text" name="username" placeholder="Your Roblox username" class="form-input" required>
         <h1 class="form-input-title">email</h1>
