--- a/forms/formf4p7e6d5l.html
+++ b/forms/formf4p7e6d5l.html
@@ -43,7 +43,7 @@
       <p>Hi there probably you whatched the ui dev log. Where I (foodeggs7) have revamped our ui. We need your feedback on this new ui. You can get an exclusive decoration, by fill in your username. We need your mail adres may, we not understand you or need to contact you. We also sent an cc to you if you get the decorations. So hold on your mail box.</p>
         </div>
         <input type="hidden" name="access_key" value="032437ac-e754-4bb5-8636-471435c3c3e3"> 
-        <input type="hidden" name="redirect" value="https://unviere.github.io/Unviere/forms/formf4p7e6d5l/succes"><!--important-->
+        <input type="hidden" name="redirect" value="https://legacy.unviere.com/forms/formf4p7e6d5l/succes"><!--important-->
         <h1 class="form-input-title"> Your username<i class="recured">*</i></h1>
          <p class="desc-input">May only contains: 1-0, a-z, A-Z, _ (1)</p>
         <input type="text" name="username" placeholder="Your Roblox username" class="form-input" required pattern="^[a-zA-Z0-9_]{1,20}$">
