--- a/forms/formj5u6g7j24.html
+++ b/forms/formj5u6g7j24.html
@@ -39,7 +39,7 @@
       <h1 class="title">join us with unite 2024</h1>
       <hr>
       <p class="content"> this from is now inactive the challenge is about to end soon also hold on this site soon the new game jam game comes</p>
-<a href="https://unviere.github.io/Unviere" class="button ctaa">ok (home) </a>
+<a href="https://legacy.unviere.com" class="button ctaa">ok (home) </a>
     </div>
            </section>   
            
@@ -55,7 +55,7 @@
       <p>Hi there you want to join us "team Unviere" with the Unite game jam. Do you have the skills to complete a game in 15 days. Then you can join our team are you based on Europe then we looking for you however if not doesn't care either. One thing it will be fun.</p>
         </div>
         <input type="hidden" name="access_key" value="032437ac-e754-4bb5-8636-471435c3c3e3"> 
-        <input type="hidden" name="redirect" value="https://unviere.github.io/Unviere/forms/formj5u6g7j24/success"><!--important-->
+        <input type="hidden" name="redirect" value="https://legacy.unviere.com/forms/formj5u6g7j24/success"><!--important-->
         
           <h1 class="form-input-title"> Your username<i class="recured">*</i></h1>
          <p class="desc-input">May only contain: 1-0, a-z, A-Z, _ (1)</p>
