fixed 404 error link showing old link

--- a/games/game.html
+++ b/games/game.html
@@ -47,7 +47,7 @@
         <h1 class="error-title">error 404</h1>
         <br>
         <p class="error-desc">we looked for a wide ranch but couldn't find the page you are looking for this can come due the following reasons<br>• the link isnt valid
-             it might be the case that the link doesn't contain the correct information it needs to be something like </p> <a class="link-d error-desc"> https://unviere.github.io/Unviere/games/game?id=12346/game-name</a><p class="error-desc">or</p> <a class="link-d error-desc"> https://unviere.github.io/Unviere/games/game?id=124653/game-name/?info=info</a> <p class="error-desc"> if it contains extra information<br>
+             it might be the case that the link doesn't contain the correct information it needs to be something like </p> <a class="link-d error-desc"> https://legacy.unviere.com/games/game?id=12346/game-name</a><p class="error-desc">or</p> <a class="link-d error-desc"> https://legacy.unviere.com/games/game?id=124653/game-name/?info=info</a> <p class="error-desc"> if it contains extra information<br>
              • you have rejected JavaScript in your browser settings 
 the page need to run JavaScript to load the game page<br>
 • check your internet 
