fixed anoter link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h1 class="sidebar-header">Also checkout.</h1>
         
         <li><a class="navigate" href="https://legacy.unviere.com/games">Games</a></li>
-        <li><a class="navigate" href="https://unviere.github.io/Unvier/settings">Settings</a></li>
+        <li><a class="navigate" href="https://legacy.unviere.com/settings">Settings</a></li>
         <div class="scroll-padding"></div>
    </template>
     
